[package]
name = "rust-backend-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"

[[bin]]
name = "rust-backend-test"
path = "web-socket-server.rs"
