[package]
name = "rust-backend-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
block-id = "0.1.2"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
uuid = { version = "1.3.0", features = ["v4"]}

[[bin]]
name = "rust-backend-test"
path = "src/main.rs"
